# skillfile

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  codecov.yml  install.sh
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  main.rs  update_check.rs
crates/cli/src/commands/: add.rs  add_tui.rs  diff.rs  format.rs  info.rs  init.rs  installed_variants.rs  list.rs  mod.rs  multi_target.rs  pin.rs  resolve.rs  search.rs  status.rs  validate.rs
crates/cli/src/commands/snapshots/: skillfile__commands__add_tui__tests__render_empty_filter.snap  skillfile__commands__add_tui__tests__render_filtered_with_selections.snap  skillfile__commands__add_tui__tests__render_initial_state.snap  skillfile__commands__add_tui__tests__render_selected_items.snap  skillfile__commands__add_tui__tests__render_with_failed_preview.snap  skillfile__commands__add_tui__tests__render_with_loaded_preview.snap  skillfile__commands__add_tui__tests__render_with_preview_scroll.snap
crates/core/: Cargo.toml
crates/core/src/: models.rs  parser.rs  patch.rs
crates/deploy/src/: adapter.rs  install.rs  lib.rs  paths.rs  target.rs
crates/deploy/tests/: install_deploy_all.rs
crates/sources/src/: http.rs  resolver.rs  strategy.rs  sync.rs
fuzz/fuzz_targets/: parse_manifest.rs
tests/: Cargo.toml  cli.rs  install_path.rs  interactive.rs  junie.rs  upstream.rs
