[package]
name = "skillfile-functional-tests"
version = "0.0.0"
edition.workspace = true
publish = false

[[test]]
name = "cli"
path = "cli.rs"

[[test]]
name = "upstream"
path = "upstream.rs"

[[test]]
name = "interactive"
path = "interactive.rs"

[[test]]
name = "install_directory_layout"
path = "install_directory_layout.rs"

[[test]]
name = "install_path"
path = "install_path.rs"

[[test]]
name = "junie"
path = "junie.rs"

[dependencies]
assert_cmd = { workspace = true }

[dev-dependencies]
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
skillfile-sources = { workspace = true }
retry = { workspace = true }
serial_test = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
rexpect = { workspace = true }

[lints]
workspace = true
